tests/snapshots/tokenizer_test__tokenizer__tokenizer_colon.snap
---
source: tests/tokenizer_test.rs
expression: tokens
---
[
    Token {
        kind: "colon",
        raw: ":",
        span: Span {
            start: 0,
            end: 1,
        },
    },
]
