tests/snapshots/tokenizer_test__tokenizer__tokenizer_comment.snap
---
source: tests/tokenizer_test.rs
assertion_line: 11
expression: tokens
---
[
    Token {
        kind: "comment",
        raw: "# abc",
        span: Span {
            start: 0,
            end: 5,
        },
    },
]
