tests/snapshots/tokenizer_test__tokenizer__tokenizer_comment_and_newline_1.snap
---
source: tests/tokenizer_test.rs
expression: tokens
---
[
    Token {
        kind: "comment",
        raw: "# abc",
        span: Span {
            start: 0,
            end: 5,
        },
    },
    Token {
        kind: "newline",
        raw: "\n",
        span: Span {
            start: 5,
            end: 6,
        },
    },
]
