tests/snapshots/tokenizer_test__tokenizer__tokenizer_keyword_and_newline.snap
---
source: tests/tokenizer_test.rs
expression: tokens
---
[
    Token {
        kind: "keyword",
        raw: "ABC123_32",
        span: Span {
            start: 0,
            end: 9,
        },
    },
    Token {
        kind: "newline",
        raw: "\n",
        span: Span {
            start: 9,
            end: 10,
        },
    },
]
