tests/snapshots/tokenizer_test__tokenizer__tokenizer_number_1.snap
---
source: tests/tokenizer_test.rs
expression: tokens
---
[
    Token {
        kind: "number",
        raw: "12",
        span: Span {
            start: 0,
            end: 2,
        },
    },
]
