tests/snapshots/tokenizer_test__tokenizer__tokenizer_string.snap
---
source: tests/tokenizer_test.rs
expression: tokens
---
[
    Token {
        kind: "string",
        raw: "hola",
        span: Span {
            start: 1,
            end: 5,
        },
    },
]
