tests/snapshots/tokenizer_test__tokenizer__tokenizer_string_with_scape.snap
---
source: tests/tokenizer_test.rs
expression: tokens
---
[
    Token {
        kind: "string",
        raw: "ho\\\"la",
        span: Span {
            start: 1,
            end: 7,
        },
    },
]
